--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -13,13 +13,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1709ee93-8057-472c-9c02-be6af23cfc82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 14)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv(\"churn\")"
+    "df = pd.read_csv(\"Churn_Modelling/Churn_Modelling.csv\")\n",
+    "df.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9cf38ce-3a83-40af-873b-6688f309a035",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
