--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -2,17 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "3881d80b-a5d2-4325-a9fd-b950bb6a6c29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "e9cf38ce-3a83-40af-873b-6688f309a035",
    "metadata": {},
    "outputs": [],
@@ -20,12 +10,12 @@
     "# Importing necessory libraries \n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "44fb18b0-eceb-4950-9244-b4b93b9996fd",
    "metadata": {},
    "outputs": [
@@ -179,7 +169,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "af00c592-d07c-4ac5-b0fb-b4ccd18362c3",
    "metadata": {},
    "outputs": [],
@@ -203,247 +193,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "acadcaa1-401e-45b8-8eb1-861e2377beb3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Feature Engineering \n",
-    "geography = pd.get_dummies(X['Geography'],drop_first=True)\n",
-    "gender = pd.get_dummies(X['Gender'],drop_first=True)\n",
+    "geography = pd.get_dummies(X['Geography'],drop_first=True).astype(int)\n",
+    "gender = pd.get_dummies(X['Gender'],drop_first=True).astype(int)\n",
     "\n",
     "# Concat new features \n",
-    "X = X.drop(['Gender', 'Geography'], axis=1)\n"
+    "X = X.drop(['Gender', 'Geography'], axis=1)\n",
+    "X = pd.concat([X, geography, gender], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "11f3f2e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d3d8e4ca-017b-48a8-be98-13c807aad252",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# do the train test split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f06653b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "# Scale the data\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d3d8e4ca-017b-48a8-be98-13c807aad252",
+   "id": "7ac77e4b-e2c5-44d7-aab5-7bbd27859cde",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CreditScore</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Tenure</th>\n",
-       "      <th>Balance</th>\n",
-       "      <th>NumOfProducts</th>\n",
-       "      <th>HasCrCard</th>\n",
-       "      <th>IsActiveMember</th>\n",
-       "      <th>EstimatedSalary</th>\n",
-       "      <th>Germany</th>\n",
-       "      <th>Spain</th>\n",
-       "      <th>Male</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>619</td>\n",
-       "      <td>42</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101348.88</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>608</td>\n",
-       "      <td>41</td>\n",
-       "      <td>1</td>\n",
-       "      <td>83807.86</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>112542.58</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>502</td>\n",
-       "      <td>42</td>\n",
-       "      <td>8</td>\n",
-       "      <td>159660.80</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113931.57</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>699</td>\n",
-       "      <td>39</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>93826.63</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>850</td>\n",
-       "      <td>43</td>\n",
-       "      <td>2</td>\n",
-       "      <td>125510.82</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>79084.10</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9995</th>\n",
-       "      <td>771</td>\n",
-       "      <td>39</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>96270.64</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9996</th>\n",
-       "      <td>516</td>\n",
-       "      <td>35</td>\n",
-       "      <td>10</td>\n",
-       "      <td>57369.61</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101699.77</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>709</td>\n",
-       "      <td>36</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>42085.58</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>772</td>\n",
-       "      <td>42</td>\n",
-       "      <td>3</td>\n",
-       "      <td>75075.31</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>92888.52</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>792</td>\n",
-       "      <td>28</td>\n",
-       "      <td>4</td>\n",
-       "      <td>130142.79</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>38190.78</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10000 rows × 11 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      CreditScore  Age  Tenure    Balance  NumOfProducts  HasCrCard  \\\n",
-       "0             619   42       2       0.00              1          1   \n",
-       "1             608   41       1   83807.86              1          0   \n",
-       "2             502   42       8  159660.80              3          1   \n",
-       "3             699   39       1       0.00              2          0   \n",
-       "4             850   43       2  125510.82              1          1   \n",
-       "...           ...  ...     ...        ...            ...        ...   \n",
-       "9995          771   39       5       0.00              2          1   \n",
-       "9996          516   35      10   57369.61              1          1   \n",
-       "9997          709   36       7       0.00              1          0   \n",
-       "9998          772   42       3   75075.31              2          1   \n",
-       "9999          792   28       4  130142.79              1          1   \n",
-       "\n",
-       "      IsActiveMember  EstimatedSalary  Germany  Spain   Male  \n",
-       "0                  1        101348.88    False  False  False  \n",
-       "1                  1        112542.58    False   True  False  \n",
-       "2                  0        113931.57    False  False  False  \n",
-       "3                  0         93826.63    False  False  False  \n",
-       "4                  1         79084.10    False   True  False  \n",
-       "...              ...              ...      ...    ...    ...  \n",
-       "9995               0         96270.64    False  False   True  \n",
-       "9996               1        101699.77    False  False   True  \n",
-       "9997               1         42085.58    False  False  False  \n",
-       "9998               0         92888.52     True  False   True  \n",
-       "9999               0         38190.78    False  False  False  \n",
-       "\n",
-       "[10000 rows x 11 columns]"
+       "(8000, 11)"
       ]
      },
      "execution_count": 9,
@@ -452,29 +261,37 @@
     }
    ],
    "source": [
-    "pd.concat([X, geography, gender], axis=1)"
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2a57e9c3-d532-47e2-93c7-aa8102444856",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's create the ANN\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.layers import LeakyReLU, PReLU, ELU, ReLU\n",
+    "from tensorflow.keras.layers import Dropout\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ac77e4b-e2c5-44d7-aab5-7bbd27859cde",
+   "id": "dd21c6f8",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a57e9c3-d532-47e2-93c7-aa8102444856",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# intialization of the ANN  \n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
