--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -733,7 +733,22 @@
    "id": "1038dcc5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "classifier2 = Sequential()\n",
+    "# True input layer\n",
+    "# classifier.add(Input(shape=(X_train.shape[1],))) # this is the input layer\n",
+    "# Adding the input layer\n",
+    "classifier2.add(Dense(units=7, activation='relu')) # this is jus an hidden layer\n",
+    "# adding an dropout layer\n",
+    "classifier2.add(Dropout(0.2))\n",
+    "# Adding the hidden layer\n",
+    "classifier2.add(Dense(units=6, activation='relu'))\n",
+    "# Adding the output layer\n",
+    "classifier2.add(Dense(units=1, activation='sigmoid'))\n",
+    "\n",
+    "classifier2.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "# Training the model\n"
+   ]
   }
  ],
  "metadata": {
